Added signature with code source link

--- a/index.html
+++ b/index.html
@@ -100,6 +100,12 @@
         </div>
       </div>
     </div>
+    <a
+      href="https://github.com/domcneil/weather-app"
+      target="_blank"
+      class="signature"
+      >Open-Source Code by Dominique McNeil</a
+    >
     <script src="script.js"></script>
   </body>
 </html>
