Updated icon image to change based on current city weather

--- a/index.html
+++ b/index.html
@@ -51,20 +51,20 @@
               <h1>
                 <span id="temperature"></span>
                 <span class="degrees"
-                  ><a href="#" id="farenheit">°F</a>/<a href="#" id="celsius"
-                    >°C</a
+                  ><a href="#" id="farenheit">°F </a>|<a href="#" id="celsius">
+                    °C</a
                   ></span
                 >
               </h1>
             </div>
-            <div class="col-2">
-              <i class="fa-solid fa-cloud-sun present-icon"></i>
+            <div class="col-3">
+              <img src="" id="present-icon" />
             </div>
             <div class="col-2">
               <p>Humidity: <span id="humidity"></span></p>
               <p>Wind: <span id="wind"></span></p>
             </div>
-            <div class="col-5">
+            <div class="col-4">
               <h2 id="display-city"></h2>
               <h3 id="date"></h3>
               <h3 id="weather-description"></h3>
