Resized weather icon

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
               </h1>
             </div>
             <div class="col-3">
-              <img src="" id="present-icon" />
+              <img src="" id="present-icon" width="75" />
             </div>
             <div class="col-2">
               <p>Humidity: <span id="humidity"></span></p>
