Added celsius/fahrenheit conversion and styling

--- a/index.html
+++ b/index.html
@@ -51,7 +51,10 @@
               <h1>
                 <span id="temperature"></span>
                 <span class="degrees"
-                  ><a href="#" id="farenheit">°F </a>|<a href="#" id="celsius">
+                  ><a href="#" id="farenheit" class="active">°F </a>|<a
+                    href="#"
+                    id="celsius"
+                  >
                     °C</a
                   ></span
                 >
