Displayed forecast using javascript and got forecast for input city using new API call

--- a/index.html
+++ b/index.html
@@ -73,33 +73,7 @@
               <h3 id="weather-description"></h3>
             </div>
           </div>
-          <div class="row">
-            <div class="col">
-              <div class="future-date">Sun</div>
-              <i class="fa-solid fa-cloud-sun weather-icon"></i>
-              <div class="future-temp">52° | 33°</div>
-            </div>
-            <div class="col">
-              <div class="future-date">Mon</div>
-              <i class="fa-solid fa-sun weather-icon"></i>
-              <div class="future-temp">49° | 29°</div>
-            </div>
-            <div class="col">
-              <div class="future-date">Tue</div>
-              <i class="fa-solid fa-cloud-rain weather-icon"></i>
-              <div class="future-temp">49° | 43°</div>
-            </div>
-            <div class="col">
-              <div class="future-date">Wed</div>
-              <i class="fa-solid fa-cloud-rain weather-icon"></i>
-              <div class="future-temp">50° | 35°</div>
-            </div>
-            <div class="col">
-              <div class="future-date">Thur</div>
-              <i class="fa-solid fa-cloud-sun weather-icon"></i>
-              <div class="future-temp">46° | 29°</div>
-            </div>
-          </div>
+          <div class="weather-forecast" id="forecast"></div>
         </div>
       </div>
     </div>
