Updated the CSS/HTML

--- a/index.html
+++ b/index.html
@@ -11,10 +11,6 @@
       integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi"
       crossorigin="anonymous"
     />
-    <script
-      src="https://kit.fontawesome.com/da1fff83f9.js"
-      crossorigin="anonymous"
-    ></script>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -77,11 +73,11 @@
         </div>
       </div>
     </div>
-    <a
-      href="https://github.com/domcneil/weather-app"
-      target="_blank"
-      class="signature"
-      >Open-Source Code by Dominique McNeil</a
+    <span class="signature"
+      ><a href="https://github.com/domcneil/weather-app" target="_blank"
+        >Open-Source Code</a
+      >
+      by Dominique McNeil</span
     >
     <script src="script.js"></script>
   </body>
